--- a/src/pug/4-0contact.pug
+++ b/src/pug/4-0contact.pug
@@ -18,7 +18,7 @@ block content
 							a(href="#").bread-item Главная
 							a(href="#").bread-item Контакты
 					.page-head-button
-						.btn.secondary.js-popup-button(data-modal='callback')
+						.btn.secondary.js-popup-button(data-modal='obratka')
 							span Форма обратной связи
 	.wrapper
 		.box
@@ -51,10 +51,10 @@ block content
 									.text.primary Пн–Сб: 8:30–21:00 Вс: 9:00–20:00
 								.desc-item.s100
 									.text У нас удобное расположение, в шаговой доступности от двух станций метро, рядом две платные стоянки.
-									.link-dotted.metro.js-popup-button(data-modal='metro', data-href='/metro.html', data-slideTo='1').ajax-trigger
+									.link-dotted.metro.js-popup-button(data-modal='metro', data-href='/map.html', data-slideto='0').ajax-trigger
 										i 
 										span маршрут от ст.м. Смоленская
-									.link-dotted.metro.js-popup-button(data-modal='metro', data-href='/metro.html', data-slideTo='2').ajax-trigger
+									.link-dotted.metro.js-popup-button(data-modal='metro', data-href='/map.html', data-slideto='1').ajax-trigger
 										i 
 										span маршрут от ст.м. Смоленская
 
