--- a/src/pug/includes/_header.pug
+++ b/src/pug/includes/_header.pug
@@ -72,7 +72,7 @@ include _mixins.pug
 								a(href="#").spec-link
 									.spec-link-title.dropdown Записаться online
 									.text Записаться на прием самостоятельно, выбрав врача и удобное время в личном кабинете
-								.spec-link.js-popup-button(data-modal='zayavka')
+								.spec-link.js-popup-button(data-modal='offer')
 									.spec-link-title.dropdown Оставить заявку
 									.text Оставить заявку на приём через форму на сайте (вам перезвонят, чтобы уточнить детали)
 				.tel-wrap
