--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -118,7 +118,7 @@ block content
 											//video.fillWidth(autoplay='', loop='')
 												source(src='img/index/video/clouds.mp4', type='video/mp4')
 												source(src='img/index/video/clouds.webm', type='video/webm').
-											//.video-wrap
+											.video-wrap
 												.video-wrap-cover(style='background-image: url(img/index/1.jpg)')
 												iframe(width='100%', height='100%', src='https://www.youtube.com/embed/rU701oPa2cE', frameborder='0', allowfullscreen='')
 											//.video-container-slider
@@ -144,7 +144,7 @@ block content
 														.video-container-slider-text
 															.text Концентратор кислорода "Armed" 7F-3A
 												.dots-wrap
-											img(data-src="img/index/slide.jpg", alt="").js-image
+											//img(data-src="img/index/slide.jpg", alt="").js-image
 
 
 	.wrapper
